💥 Switched mongoose to db0

--- a/app/locales/en-US.json
+++ b/app/locales/en-US.json
@@ -22,6 +22,7 @@
     "logout": "Logout"
   },
   "login": {
+    "full_title": "Login • PM2 Nel",
     "title": "Login",
     "username": "Username",
     "password": "Password"
