--- a/app/locales/pt-BR.json
+++ b/app/locales/pt-BR.json
@@ -22,6 +22,7 @@
     "logout": "Sair"
   },
   "login": {
+    "full_title": "Login • PM2 Nel",
     "title": "Login",
     "username": "Usuário",
     "password": "Senha"
