🎨 Improved bytes and uptime functions

--- a/app/locales/en-US.json
+++ b/app/locales/en-US.json
@@ -32,8 +32,8 @@
     "instances": "Instances",
     "cpu": "CPU",
     "ram": "RAM",
-    "gb": "GB",
     "uptime": "Uptime",
+    "minutes": "minutes",
     "hours": "hours",
     "start": "Start",
     "reload": "Reload",
