--- a/app/locales/pt-BR.json
+++ b/app/locales/pt-BR.json
@@ -32,8 +32,8 @@
     "instances": "Instâncias",
     "cpu": "CPU",
     "ram": "RAM",
-    "gb": "GB",
-    "uptime": "Tempo de atividade",
+    "uptime": "Atividade",
+    "minutes": "minutos",
     "hours": "horas",
     "start": "Iniciar",
     "reload": "Recarregar",
