--- a/app/locales/en-US.json
+++ b/app/locales/en-US.json
@@ -37,6 +37,9 @@
     "hours": "hours",
     "instance": "Instance",
     "interpreter": "Interpreter",
+    "cores": "Cores",
+    "ram_usage": "RAM Usage",
+    "node_version": "Node Version",
     "start": "Start",
     "reload": "Reload",
     "restart": "Restart",
