--- a/app/locales/pt-BR.json
+++ b/app/locales/pt-BR.json
@@ -37,6 +37,9 @@
     "hours": "horas",
     "instance": "Instância",
     "interpreter": "Interpretador",
+    "cores": "Núcleos",
+    "ram_usage": "Uso de RAM",
+    "node_version": "Versão do Node",
     "start": "Iniciar",
     "reload": "Recarregar",
     "restart": "Reiniciar",
